<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">FineGo</string>
    <string name="sign_out">Sign Out</string>
    <string name="profile_menu">Profile</string>
    <string name="your_web_client_id">243778867600-t1nsuq4djlubtuu8eckjjvmp01vpagtj.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="budgetPlanning">Budget Planning</string>
    <string name="transactionTracking">Transaction Tracking</string>
    <string name="monthlyReport">Monthly Report</string>
    <string name="error_password">Password must be at least 8 characters</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="email_must_valid">Email Must be Valid</string>
    <string name="password_field_description">password field</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_not_valid">Email not Valid</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_text">Masuk ke FineGo</string>
    <string name="signin_google">Sign In with Google</string>
    <string name="formulir_input_data">Formulir Input Data</string>
    <string name="nama">Nama</string>
    <string name="usia">Usia</string>
    <string name="simpan">Simpan</string>
    <string name="profilephoto">ProfilePhoto</string>
    <string name="update_foto">Update Foto</string>
    <string name="username">Username</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="alamat">Alamat</string>
    <string name="submit">Submit</string>
    <string-array name="tempat_tinggal">
        <item >--Pilih Provinsi--</item>
        <item android:value="Nanggroe Aceh Darussalam">Nanggroe Aceh Darussalam</item>
        <item android:value="Sumatera Utara">Sumatera Utara</item>
        <item android:value="Sumatera Selatan">Sumatera Selatan</item>
        <item android:value="Sumatera Barat">Sumatera Barat</item>
        <item android:value="Bengkulu">Bengkulu</item>
        <item android:value="Riau">Riau</item>
        <item android:value="Kepulauan Riau">Kepulauan Riau</item>
        <item android:value="Jambi">Jambi</item>
        <item android:value="Lampung">Lampung</item>
        <item android:value="Bangka Belitung">Bangka Belitung</item>
        <item android:value="Kalimantan Barat">Kalimantan Barat</item>
        <item android:value="Kalimantan Timur">Kalimantan Timur</item>
        <item android:value="Kalimantan Selatan">Kalimantan Selatan</item>
        <item android:value="Kalimantan Tengah">Kalimantan Tengah</item>
        <item android:value="Kalimantan Utara">Kalimantan Utara</item>
        <item android:value="Banten">Banten</item>
        <item android:value="DKI Jakarta">DKI Jakarta</item>
        <item android:value="Jawa Barat">Jawa Barat</item>
        <item android:value="Jawa Tengah">Jawa Tengah</item>
        <item android:value="Daerah Istimewa Yogyakarta">Daerah Istimewa Yogyakarta</item>
        <item android:value="Jawa Timur">Jawa Timur</item>
        <item android:value="Bali">Bali</item>
        <item android:value="Nusa Tenggara Timur">Nusa Tenggara Timur</item>
        <item android:value="Nusa Tenggara Barat">Nusa Tenggara Barat</item>
        <item android:value="Gorontalo">Gorontalo</item>
        <item android:value="Sulawesi Barat">Sulawesi Barat </item>
        <item android:value="Sulawesi Tengah">Sulawesi Tengah</item>
        <item android:value="Sulawesi Utara">Sulawesi Utara</item>
        <item android:value="Sulawesi Tenggara">Sulawesi Tenggara</item>
        <item android:value="Sulawesi Selatan">Sulawesi Selatan</item>
        <item android:value="Maluku Utara">Maluku Utara</item>
        <item android:value="Maluku">Maluku</item>
        <item android:value="Papua Tengah">Papua Tengah</item>
        <item android:value="Papua">Papua</item>
        <item android:value="Papua Pegunungan">Papua Pegunungan</item>
        <item android:value="Papua Selatan">Papua Selatan</item>
        <item android:value="Papua Barat Daya">Papua Barat Daya</item>


    </string-array>

    <string name="internet_perbulan">Internet/Bulan</string>
    <string name="listrik_perbulan">Listrik/Bulan</string>
    <string name="nomor_handphone">Nomor Telepon</string>
    <string name="penghasilan_perbulan">Penghasilan/Bulan</string>
    <string name="transportasi_perbulan">Transportasi/Bulan</string>
    <string name="biaya_sewa_perbulan">Biaya Sewa/Bulan</string>
    <string name="utang">Utang</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="rp_1_000_000">Rp 1.000.000</string>
    <string name="saldo">Saldo</string>
    <string name="info">Transaksi Anda Ada di Sini</string>
    <string name="hi">Hi</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="detail_pengeluaran">Detail Pengeluaran</string>
    <string name="default_username">User</string>
    <string name="tanda_seru">!</string>
    <string name="transaksi">Transaksi</string>
    <string name="begin_time">Hari, Tanggal</string>
    <string name="jam">Jam</string>
    <string name="transaction_icon">transaction icon</string>
    <string name="catatan">Catatan</string>
    <string name="sumber_pemasukan">Sumber Pemasukan</string>
    <string name="hari_tanggal">Hari, Tanggal</string>
    <string name="nominal">Nominal</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="kategori_pengeluaran">Kategori Pengeluaran</string>
    <string name="budget_planning_info">Kamu Tetap Pada Batasmu Hari Ini!</string>
    <string name="batas_bulanan">Batas Bulanan</string>
    <string name="november_2024">November 2024</string>
    <string name="kategori">kategori</string>
    <string name="keuangan_sehat">Keuangan Sehat</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="register_text">Daftarkan Dirimu</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="sudah_punya_akun">Sudah Punya Akun</string>
    <string name="show_password">Show Password</string>
    <string name="makan">Makan/Bulan</string>
    <string name="tabungan">Tabungan</string>
    <string name="rasio_tabungan">Rasio Tabungan</string>
    <string name="tabungan_berhasil">Saran menabung untuk kamu di bulan ini. Semangat!.</string>
    <string name="nol_persen">0%</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="batal">Batal</string>
    <string name="provinsi">Provinsi</string>
    <string name="penghasilan">Penghasilan</string>
    <string name="air_perbulan">Tagihan Air/Bulan</string>
    <string name="pilih_provinsi">Pilih Provinsi</string>
    <string name="transaksi_kosong">Yuk, mulai mencatat pengeluaran dan pemasukanmu hari ini untuk mendapatkan gambaran yang lebih jelas mengenai keuanganmu</string>
    <string name="detail_anggaran">DetailAnggaran</string>
    <string-array name="kategori_pengeluaran">
        <item>--Pilih Kategori--</item>
        <item android:value="transportation_expenses">Transportasi</item>
        <item android:value="food_expenses">Makan</item>
        <item android:value="housing_cost">Tempat Tinggal</item>
        <item android:value="electricity_bill">Listrik</item>
        <item android:value="water_bill">Air</item>
        <item android:value="debt">Hutang</item>
        <item android:value="internet_bill">Internet</item>
        <item android:value="other">Lainnya</item>
    </string-array>
    <string name="label_keuangan">Keuangan %1$s</string>
    <string name="amount_expense">Rp. %1$s</string>
    <string name="item_name">Item Name</string>
    <string name="pengeluaran_tertinggi">Pengeluaran Tertinggi :</string>
    <string name="desember_2024">Desember 2024</string>
    <string name="amount_format">Rp. %s</string>
    <string name="monthly_limit_format">Rp. %d</string>
    <string name="savings_rate_format">%d%%</string>
    <string name="total_income">Rp. %d</string>
    <string name="total_expense">Rp. %d</string>
    <string name="balance">Rp. %d</string>




</resources>