<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/green"
    android:padding="16dp"
    tools:context=".FormActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formulir_input_data"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            />

        <!-- Nama -->
        <EditText
            android:id="@+id/et_nama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:inputType="textPersonName"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_judul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_nama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Usia -->
        <EditText
            android:id="@+id/et_tgl_lahir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/tgl_lahir"
            android:inputType="number"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Spinner
            android:id="@+id/et_provinsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:padding="12dp"
            android:autofillHints="@string/provinsi"
            app:layout_constraintTop_toBottomOf="@id/et_tgl_lahir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:entries="@array/tempat_tinggal"
            android:prompt="@string/pilih_provinsi"
            />


        <!-- Penghasilan/Bulan -->
        <EditText
            android:id="@+id/et_penghasilan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/penghasilan_perbulan"
            android:inputType="numberDecimal"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_provinsi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- Transportasi/Bulan -->
        <EditText
            android:id="@+id/et_transportasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/transportasi_perbulan"
            android:inputType="numberDecimal"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_penghasilan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- Biaya Sewa/Bulan -->
        <EditText
            android:id="@+id/et_sewa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/biaya_sewa_perbulan"
            android:inputType="numberDecimal"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_transportasi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <!-- Listrik/Bulan -->
        <EditText
            android:id="@+id/et_listrik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/listrik_perbulan"
            android:inputType="numberDecimal"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_sewa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/et_air"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/air_perbulan"
            android:inputType="numberDecimal"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_listrik"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/et_internet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/internet_perbulan"
            android:inputType="numberDecimal"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_air"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/et_utang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/utang"
            android:inputType="numberDecimal"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_internet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/et_makan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/makan"
            android:inputType="numberDecimal"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_utang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/et_tabungan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/tabungan"
            android:inputType="numberDecimal"
            android:background="@android:drawable/edit_text"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/et_makan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/et_tabungan"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>