<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:backgroundTint="@color/green"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".features.form.PemasukanActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pemasukan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/et_tanggal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pilih_tanggal"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:background="@drawable/bg_input"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />



    <EditText
        android:id="@+id/et_kategori"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/sumber_pemasukan"
        android:inputType="text"
        android:background="@drawable/bg_input"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/et_tanggal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <EditText
        android:id="@+id/et_nominal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nominal"
        android:inputType="numberDecimal"
        android:background="@drawable/bg_input"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/et_kategori"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <EditText
        android:id="@+id/et_catatan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/catatan"
        android:inputType="textMultiLine"
        android:background="@drawable/bg_input"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/et_nominal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/simpan"
        android:textColor="@color/white"
        android:backgroundTint="#419872"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/et_catatan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
